<resources>
    <string name="app_name">MyGuide</string>

    <string name="home">首页</string>
    <string name="message">消息</string>
    <string name="me">我</string>

    <string name="login_title">登录</string>
    <string name="login_skip">跳过</string>
    <string name="login_user_name">输入用户名</string>
    <string name="login_password">输入密码</string>
    <string name="login_text">立即登录</string>
    <string name="login_goto_register_title">还没有账号？点击</string>
    <string name="login_goto_register">注册账号</string>
    <string name="login_manager">当前登录的账号为管理员账号</string>
    <string name="login_username_not_null">用户名不能为空</string>
    <string name="login_password_not_null">密码不能为空</string>

    <string name="register_title">注册</string>
    <string name="register_user_name">输入用户名</string>
    <string name="register_password">输入密码</string>
    <string name="register_password_again">再输入一次密码</string>
    <string name="register_text">立即注册</string>
    <string name="register_username_not_null">用户名不能为空</string>
    <string name="register_password_not_null">密码不能为空</string>
    <string name="register_password_not_match">两次输入的密码不相同</string>

    <string name="skip_splash">跳过</string>

    <string name="send_post_title">发帖</string>
    <string name="send_post_send">上传</string>
    <string name="send_post_post_title">标题</string>
    <string name="send_post_post_title_hint">请输入标题，标题不能为空</string>
    <string name="send_post_post_content">内容</string>
    <string name="send_post_post_content_hint">输入内容，内容不能超过300字</string>
    <string name="send_post_post_content_num">%d/300</string>
    <string name="send_post_is_boutique">精品</string>
    <string name="send_post_city">天津</string>
    <string name="send_post_food">美食</string>
    <string name="send_post_place">景点</string>
    <string name="send_post_user">用户</string>
    <string name="send_post_item_delete">删除</string>
    <string name="send_post_item_cancel">取消</string>
    <string name="send_post_not_login">登录后才可以发帖</string>

    <string name="location">天津</string>
    <string name="location_list_title">选择</string>
    <string name="home_more">更多...</string>
    <string name="home_post_title">内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容。</string>
    <string name="home_post_nickname">昵称</string>
    <string name="home_post_time">1970-09-06</string>
    <string name="home_post_good">114514</string>
    <string name="home_post_reply">450</string>

    <string name="post_list_title">帖子列表</string>
    <string name="post_list_no_post">这里没有帖子，去其他分类看看吧~</string>
    <string name="post_list_food">美食推荐</string>
    <string name="post_list_place">景点推荐</string>
    <string name="post_list_user">用户推荐</string>

    <string name="post_detail_title">帖子详情</string>
    <string name="post_detail_more_user">···</string>
    <string name="post_post_title">标题</string>
    <string name="post_favorite_num">10</string>
    <string name="post_floor_num">第%1d楼</string>
    <string name="post_send_reply_empty">评论内容不能为空！</string>
    <string name="post_send_reply_not_login">登录后才能发表评论哦</string>
    <string name="post_send_reply_success">评论成功</string>
    <string name="post_operate_success">操作成功</string>
    <string name="post_pre_img">预览</string>

    <string name="post_delete">删除</string>
    <string name="post_boutique">加精/取消加精</string>
    <string name="post_change_type">修改分类</string>
    <string name="post_food">美食</string>
    <string name="post_place">景点</string>
    <string name="post_user">用户</string>

    <string name="message_not_login">您还没有登录，登录后可接受消息</string>
    <string name="message_already_read">标为已读</string>
    <string name="message_delete">全部删除</string>
    <string name="message_no_message">还没有开始新会话，点击右上角和好友开始聊天吧！</string>
    <string name="message_search_friend">查找好友</string>
    <string name="message_friend_list">好友列表</string>
    <string name="message_black_list">黑名单</string>
    <string name="message_nickname">昵称</string>
    <string name="message_content">消息内容</string>
    <string name="message_item_read">标为已读</string>
    <string name="message_item_delete">删除</string>

    <string name="friends_list_title">好友列表</string>
    <string name="friends_no_friends">还没有好友，快去添加好友吧！</string>
    <string name="friends_nickname">昵称</string>

    <string name="black_list_title">黑名单</string>
    <string name="black_no_blacks">黑名单里空空如也~</string>

    <string name="query_search">搜索</string>
    <string name="query_search_result">搜索结果</string>
    <string name="query_history_title">历史搜索记录</string>
    <string name="query_no_history">暂无搜索记录</string>
    <string name="query_not_empty">搜索不能为空</string>
    <string name="query_clear">清空</string>

    <string name="chat_title">昵称</string>
    <string name="chat_send">发送</string>
    <string name="chat_time">2019-11-14 10:57:32</string>
    <string name="chat_message_not_empty">发送的消息不能为空</string>
    <string name="chat_no_message">暂无消息，快和好友聊天吧</string>
    <string name="chat_num">99+</string>

    <string name="user_detail_title">详情</string>
    <string name="user_detail_send_msg">发送消息</string>
    <string name="user_detail_add_friend">添加好友</string>
    <string name="user_detail_delete_friend">移除好友</string>
    <string name="user_detail_add_black">添加黑名单</string>
    <string name="user_detail_delete_black">移除黑名单</string>
    <string name="user_detail_nickname">昵称</string>
    <string name="user_detail_username">用户名</string>
    <string name="user_detail_introduction_title">个人介绍：</string>
    <string name="user_detail_introduction_content">您很懒什么也没留下</string>

    <string name="me_user_nickname">点击登录</string>
    <string name="me_username">登录后您可享受更多特权</string>
    <string name="me_introduction_title">个人介绍：</string>
    <string name="me_introduction_content">您很懒什么也没留下</string>
    <string name="me_post_list_title">我的帖子</string>
    <string name="me_favorite_list_title">我的收藏</string>
    <string name="me_like_list_title">我的点赞</string>
    <string name="me_setting_title">设置</string>

    <string name="center_title">个人资料</string>
    <string name="center_save">保存</string>
    <string name="center_avatar_title">头像</string>
    <string name="center_nickname_title">昵称</string>
    <string name="center_nickname">我是昵称</string>
    <string name="center_birthday_title">生日</string>
    <string name="center_birthday">%1d-%2d-%3d</string>
    <string name="center_sex_title">性别</string>
    <string name="center_sex_man">男</string>
    <string name="center_sex_woman">女</string>
    <string name="center_sex_unknown">未知</string>
    <string name="center_introduce_title">个人介绍</string>
    <string name="center_introduce">您很懒什么也没留下</string>
    <string name="center_notice">点击保存按钮才可提交修改~</string>
    <string name="center_change_nickname">修改昵称</string>
    <string name="center_change_introduction">修改个人介绍</string>
    <string name="center_not_login">您尚未登录</string>
    <string name="center_error">请退出重试</string>
    <string name="center_success">修改成功</string>

    <string name="dialog_title">标题</string>
    <string name="dialog_sure">确定</string>
    <string name="dialog_cancel">取消</string>

    <string name="setting_title">设置</string>
    <string name="setting_clean_cache">清除缓存</string>
    <string name="setting_clean_cache_message">是否清除缓存？</string>
    <string name="setting_cache">(%1s)</string>
    <string name="setting_cache_error">缓存获取异常</string>
    <string name="setting_sure">确定</string>
    <string name="setting_cancel">取消</string>
    <string name="logout">退出登录</string>
    <string name="login">登录</string>
    <string name="logout_toast">您已注销</string>

    <string name="web_title">网页</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
