<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".send_post.view.SendPostActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="?attr/colorPrimary"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/img_return"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:onClick="onClick"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:scaleType="centerInside"
            android:src="@drawable/icon_left_arrow"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/send_post_title"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_send"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginEnd="15dp"
            android:gravity="center_vertical"
            android:onClick="onClick"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/send_post_send"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </androidx.appcompat.widget.Toolbar>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/send_post_post_title"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible">

            <RadioButton
                android:id="@+id/radio_food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@null"
                android:button="@drawable/icon_radio"
                android:gravity="center"
                android:text="@string/send_post_food"
                android:textColor="@color/grayDark"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/radio_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@null"
                android:button="@drawable/icon_radio"
                android:gravity="center"
                android:text="@string/send_post_place"
                android:textColor="@color/grayDark"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/radio_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@null"
                android:button="@drawable/icon_radio"
                android:checked="true"
                android:gravity="center"
                android:text="@string/send_post_user"
                android:textColor="@color/grayDark"
                android:textSize="14sp" />
        </RadioGroup>

    </RelativeLayout>

    <EditText
        android:id="@+id/et_post_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_fillet_border_gray"
        android:hint="@string/send_post_post_title_hint"
        android:maxLength="128"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="14sp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_post_post_content"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/send_post_post_content_num"
            android:textColor="@color/grayDark"
            android:textSize="14sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:scrollbars="none"
        android:background="@drawable/bg_fillet_border_gray"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_post_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/send_post_post_content_hint"
                android:maxLength="300"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="14sp" />

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <Switch
            android:id="@+id/switch_is_boutique"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_is_boutique"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/switch_is_boutique"
            android:text="@string/send_post_is_boutique"
            android:textColor="@color/grayDark"
            android:textSize="16sp"
            android:visibility="gone"
            tools:visibility="visible" />

        <ImageButton
            android:id="@+id/img_local"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/tv_city"
            android:background="@null"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/icon_local" />

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/send_post_city"
            android:textColor="@color/grayDark"
            android:textSize="16sp" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp" />

</LinearLayout>