<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".user_detail.view.UserDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="?attr/colorPrimary"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/img_return"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:onClick="onClick"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:scaleType="centerInside"
            android:src="@drawable/icon_left_arrow" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/user_detail_title"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>



    <LinearLayout
        android:id="@+id/layout_user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_user_avatar"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:src="@drawable/icon_avatar_default" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_nickname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:ellipsize="end"
                        android:lines="1"
                        android:maxEms="10"
                        android:text="@string/user_detail_nickname"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <ImageView
                        android:id="@+id/img_sex"
                        android:layout_width="20dp"
                        android:layout_height="10dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/icon_man"
                        android:visibility="gone"
                        tools:visibility="visible" />

                    <ImageView
                        android:id="@+id/img_manager"
                        android:layout_width="24dp"
                        android:layout_height="12dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/icon_manager"
                        android:visibility="gone"
                        tools:visibility="visible" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:lines="1"
                        android:maxEms="10"
                        android:text="@string/user_detail_username"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_birthday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:lines="1"
                        android:maxEms="10"
                        android:text="@string/center_birthday"
                        android:textSize="10sp"
                        android:visibility="gone"
                        tools:visibility="visible" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_introduce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_detail_introduction_title"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_introduce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_detail_introduction_content"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />


    <Button
        android:id="@+id/btn_add_friend"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/btn_shape_blue_selector"
        android:onClick="onClick"
        android:text="@string/user_detail_add_friend"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="gone"
        tools:visibility="visible" />


    <Button
        android:id="@+id/btn_send_msg"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/btn_shape_blue_selector"
        android:onClick="onClick"
        android:text="@string/user_detail_send_msg"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="gone"
        tools:visibility="visible" />


    <Button
        android:id="@+id/btn_delete_friend"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/btn_shape_red_selector"
        android:onClick="onClick"
        android:text="@string/user_detail_delete_friend"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="gone"
        tools:visibility="visible" />


    <Button
        android:id="@+id/btn_add_black"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/btn_shape_red_selector"
        android:onClick="onClick"
        android:text="@string/user_detail_add_black"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="gone"
        tools:visibility="visible" />


    <Button
        android:id="@+id/btn_delete_black"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/btn_shape_red_selector"
        android:onClick="onClick"
        android:text="@string/user_detail_delete_black"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="gone"
        tools:visibility="visible" />

</LinearLayout>